# lotr_analyzer

./: .gitignore  .gitmodules  Makefile.am  body.html  configure.ac  mail2text.sh  rules.md  tools_config.h  update_db.sh
build_container/: Dockerfile  run_container.sh
config/: ConfigAnimations.cc  ConfigAnimations.h  ConfigDatabase.cc  ConfigDatabase.h  ConfigGlobal.cc  ConfigGlobal.h  ConfigMailImport.cc  ConfigMailImport.h  ConfigNetwork.cc  ConfigNetwork.h  ConfigPopeReacts.cc  ConfigPopeReacts.h  ConfigRules.cc  ConfigRules.h  ConfigSendMail.cc  ConfigSendMail.h  Configfile2.cc  Configfile2.h
data/: 1770699970.M347231P36992.e5827a314336,S=136080,W=140110:2,S  1770837331.M511834P70064.e5827a314336,S=50708,W=51819:2,S  1770837403.M854923P70064.e5827a314336,S=50708,W=51819:2,S  1770910248.M270662P87422.e5827a314336,S=76068,W=78020:2,S  1770987763.M407364P105936.e5827a314336,S=117865,W=120750:2,S  1771208435.M826901P158435.e5827a314336,S=53826,W=54578:2,S  1771912897.M715605P326957.e5827a314336,S=135159,W=139448:2,S  1772037123.M863976P356755.e5827a314336,S=240686,W=244024:2,S  1772517902.M881389P50770.e5827a314336,S=130561,W=134473:2,S  1772921768.M897669P147724.e5827a314336,S=9492,W=9636:2,S  1772921895.M885428P147757.e5827a314336,S=9320,W=9465:2,S  1772922589.M155005P147988.e5827a314336,S=1616,W=1654:2,S
db/: database.cc  database.h  db.h  dbi.cc  dbi.h  mysql_db.cc  mysql_db.h  odbc_db.h  oracle_db.h
run_container/: Dockerfile  run_container.sh
src/: App.cc  App.h  AsyncFileLogger.cc  AsyncFileLogger.h  AsyncOutDebug.cc  AsyncOutDebug.h  AutoStopFog.cc  AutoStopFog.h  BasicThread.h  ButtonListener.cc  ButtonListener.h  CheckSingleMail.cc  CheckSingleMail.h  FetchAnimation.cc  FetchAnimation.h  FetchAnswers.cc  FetchAnswers.h  FetchButton.cc  FetchButton.h  FetchSound.cc  FetchSound.h  FetchStats.cc  FetchStats.h  Grep4Data.cc  Grep4Data.h  HtmlToText.cc  HtmlToText.h  HtmlToText_test.cc  ImportMail.cc  ImportMail.h  IsOneOf.h  MailSender.cc  MailSender.h  ParseRules.cc  ParseRules.h  PlayAnimation.cc  PlayAnimation.h  PlaySound.cc  PlaySound.h  ReadMailFromFile.cc  (+14 more)
sync_container/: Dockerfile  run_container.sh
test/: .gitignore  test.sh
test/t01/: mail  mail_html.expected.txt  mail_plain.expected.txt  mail_subject.expected.txt  test.sh
test/t02/: mail  mail_html.expected.txt  mail_plain.expected.txt  mail_subject.expected.txt
test/t03/: mail  mail_html.expected.txt  mail_plain.expected.txt  mail_subject.expected.txt
test/t04/: mail_subject.expected.txt
test/t05/: mail  mail_html.expected.txt  mail_plain.expected.txt
test/t06/: mail_html.expected.txt  mail_subject.expected.txt
test/t08/: mail  mail_subject.expected.txt
test/t09/: mail_html.expected.txt  mail_plain.expected.txt
test/t10/: mail_html.expected.txt  mail_subject.expected.txt
test/t11/: mail_html.expected.txt  mail_subject.expected.txt
test/t12/: mail_html.expected.txt  mail_plain.expected.txt  mail_subject.expected.txt
test/t13/: mail  mail_html.expected.txt  mail_subject.expected.txt
test/t14/: mail  mail_html.expected.txt  mail_plain.expected.txt  mail_subject.expected.txt
test/t15/: mail_html.expected.txt  mail_subject.expected.txt
test/t16/: mail_html.expected.txt  mail_plain.expected.txt  mail_subject.expected.txt  test.sh
test/t17/: mail  mail_html.expected.txt  mail_subject.expected.txt
test/t18/: mail_html.expected.txt  mail_subject.expected.txt
test/t19/: mail  mail_html.expected.txt  mail_subject.expected.txt
test/t20/: mail  mail_html.expected.txt  mail_plain.expected.txt  mail_subject.expected.txt
test/t21/: mail_html.expected.txt  mail_subject.expected.txt
test/t22/: mail_subject.expected.txt  test.sh
test/t23/: mail  mail_plain.expected.txt  mail_subject.expected.txt  test.sh
test/t24/: mail  mail_plain.expected.txt  mail_subject.expected.txt
test/t25/: mail  mail_plain.expected.txt  mail_subject.expected.txt
test/t26/: mail_subject.expected.txt
uncompressed/: 1770548226.M588519P278.e5827a314336,S=10617,W=10810:2,S  1770548408.M26002P330.e5827a314336,S=14905,W=15135:2,S  1770548686.M629087P406.e5827a314336,S=13788,W=14004:2,S  1770549989.M186925P750.e5827a314336,S=75498,W=77084:2,S  uncompress.sh
